# AI-Tutor

./: README.md
BackEnd/: .env  .gitignore  README.md  aitutor.db  app.py  database.py  db_handler.py  init_db.py  main.py  pyproject.toml  requirements.txt  run.py
BackEnd/api/: README.md  __init__.py
BackEnd/api/v1/: __init__.py  routes.py
BackEnd/api/v2/: __init__.py  routes.py
BackEnd/app/: config.py
BackEnd/app/api/v1/: router.py
BackEnd/app/api/v1/endpoints/: courses.py  lessons.py  modules.py
BackEnd/app/api/v2/: router.py
BackEnd/app/api/v2/endpoints/: courses.py  health.py  lessons.py  modules.py
BackEnd/app/mcp_servers/: README.md
BackEnd/app/models/: course.py  lesson.py  module.py
BackEnd/app/models/v2/: course.py  lesson.py  module.py
BackEnd/app/services/: ai_service.py  ai_service_v2.py  mcp_service.py
BackEnd/app/utils/: id_generator.py
BackEnd/static/: README.md  index.html  v2-tester.html
BackEnd/static/css/: style.css
BackEnd/static/js/: app.js  main.js  v2-tester.js
BackEnd/templates/: README.md  course.html  create_lesson.html  export_course.html  index.html  plan_course.html  plan_module.html  view_course.html  view_lesson.html  view_module.html
BackEnd/test/: test_apis.py
ai_tutor/: .gitignore  README.md  pubspec.yaml
ai_tutor/android/app/: build.gradle
ai_tutor/lib/: certificate  main.dart
ai_tutor/lib/auth/: createaccount.dart  forgetpassword.dart  forgetpasswordotppage.dart  login.dart
ai_tutor/lib/core/: BottomNavigator.dart  CustomAppBar.dart  example.dart
ai_tutor/lib/quiz/: quiz.dart  result.dart
ai_tutor/linux/runner/: my_application.cc
(+4 files in other folders)
