[project]
name = "AI-Tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "httpx>=0.28.1",
    "markdown>=3.8",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.1",
]
