[project]
name = "tuteai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-session>=0.8.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.0.10",
    "langgraph>=0.4.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
    "uuid>=1.30",
    "uvicorn>=0.34.2",
]
